--- a/current/manifest.json
+++ b/current/manifest.json
@@ -105,6 +105,11 @@
       "required": true
     },
     {
+      "projectID": 289380,
+      "fileID": 3740120,
+      "required": true
+    },
+    {
       "projectID": 273744,
       "fileID": 3827756,
       "required": true
@@ -237,6 +242,11 @@
     {
       "projectID": 361026,
       "fileID": 3861416,
+      "required": true
+    },
+    {
+      "projectID": 493962,
+      "fileID": 3923644,
       "required": true
     },
     {
@@ -436,7 +446,7 @@
     },
     {
       "projectID": 495267,
-      "fileID": 3934828,
+      "fileID": 3920891,
       "required": true
     },
     {
@@ -615,6 +625,11 @@
       "required": true
     },
     {
+      "projectID": 489843,
+      "fileID": 3786522,
+      "required": true
+    },
+    {
       "projectID": 222880,
       "fileID": 3788893,
       "required": true
@@ -622,6 +637,11 @@
     {
       "projectID": 277616,
       "fileID": 3420107,
+      "required": true
+    },
+    {
+      "projectID": 242998,
+      "fileID": 3235738,
       "required": true
     },
     {
@@ -840,8 +860,18 @@
       "required": true
     },
     {
+      "projectID": 224218,
+      "fileID": 3229196,
+      "required": true
+    },
+    {
       "projectID": 419699,
       "fileID": 3857643,
+      "required": true
+    },
+    {
+      "projectID": 238747,
+      "fileID": 3038982,
       "required": true
     },
     {
@@ -1040,6 +1070,11 @@
       "required": true
     },
     {
+      "projectID": 374087,
+      "fileID": 3143731,
+      "required": true
+    },
+    {
       "projectID": 69162,
       "fileID": 3788884,
       "required": true
@@ -1067,6 +1102,11 @@
     {
       "projectID": 415438,
       "fileID": 3847095,
+      "required": true
+    },
+    {
+      "projectID": 297039,
+      "fileID": 3386805,
       "required": true
     },
     {
@@ -1102,6 +1142,11 @@
     {
       "projectID": 247921,
       "fileID": 3870739,
+      "required": true
+    },
+    {
+      "projectID": 77027,
+      "fileID": 3753564,
       "required": true
     },
     {
