--- a/current/overrides/config/jei/ingredient-list-mod-sort-order.ini
+++ b/current/overrides/config/jei/ingredient-list-mod-sort-order.ini
@@ -158,3 +158,8 @@ The Bumblezone
 The Gaia Dimension
 The Undergarden
 Tropicraft
+AE Additions
+Compact Machines 4
+Hardcore Questing Mode
+Lazier AE2
+Silent Gear
