--- a/current/overrides/config/jei/recipe-category-sort-order.ini
+++ b/current/overrides/config/jei/recipe-category-sort-order.ini
@@ -274,3 +274,13 @@ productivebees:block_conversion
 productivebees:bottler
 productivebees:centrifuge
 productivebees:incubation
+lazierae2:aggregator
+lazierae2:centrifuge
+lazierae2:energizer
+lazierae2:etcher
+silentgear:category/gear_crafting
+silentgear:compounding/fabric
+silentgear:compounding/gem
+silentgear:compounding/metal
+silentgear:grading
+silentgear:salvaging
