--- a/client/current/manifest.json
+++ b/client/current/manifest.json
@@ -1180,6 +1180,11 @@
       "required": true
     },
     {
+      "projectID": 225608,
+      "fileID": 3283693,
+      "required": true
+    },
+    {
       "projectID": 64760,
       "fileID": 3921268,
       "required": true
