--- a/client/current/overrides/config/apotheosis/names.cfg
+++ b/client/current/overrides/config/apotheosis/names.cfg
@@ -72,7 +72,7 @@ armors {
      >
 
     # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: minecraft:diamond_helmet, minecraft:diamond_chestplate, minecraft:diamond_leggings, minecraft:diamond_boots, atum:desert_helmet_diamond, atum:desert_chest_diamond, atum:desert_legs_diamond, atum:desert_boots_diamond, draconicevolution:wyvern_chestpiece, draconicevolution:draconic_chestpiece, draconicevolution:chaotic_chestpiece
+    # Items in this group: minecraft:diamond_helmet, minecraft:diamond_chestplate, minecraft:diamond_leggings, minecraft:diamond_boots, silentgear:helmet, silentgear:chestplate, silentgear:leggings, silentgear:boots, atum:desert_helmet_diamond, atum:desert_chest_diamond, atum:desert_legs_diamond, atum:desert_boots_diamond, draconicevolution:wyvern_chestpiece, draconicevolution:draconic_chestpiece, draconicevolution:chaotic_chestpiece
     #  [default: [Diamond], [Zircon], [Gemstone], [Jewel], [Crystal]]
     S:DIAMOND <
         Diamond
@@ -747,6 +747,12 @@ armors {
     S:aoa3_zargonite_helmet <
      >
     S:aoa3_zargonite_legs <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: astralsorcery:mantle
+    #  [default: ]
+    S:astralsorcery_mantle <
      >
 
     # A list of material-based prefix names for this material group. May be empty.
@@ -1904,7 +1910,7 @@ tools {
      >
 
     # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: minecraft:diamond_sword, minecraft:diamond_shovel, minecraft:diamond_pickaxe, minecraft:diamond_axe, minecraft:diamond_hoe, occultism:iesnium_pickaxe, mob_grinding_utils:null_sword, farmersdelight:diamond_knife, mekanismtools:diamond_paxel, projectred-exploration:diamond_sickle, cyclic:mattock, cyclic:mattock_nether, rftoolsbuilder:superharvestingtool, forbidden_arcanus:diamond_blacksmith_gavel, chiselsandbits:chisel_diamond
+    # Items in this group: minecraft:diamond_sword, minecraft:diamond_shovel, minecraft:diamond_pickaxe, minecraft:diamond_axe, minecraft:diamond_hoe, silentgear:sword, silentgear:katana, silentgear:machete, silentgear:spear, silentgear:knife, silentgear:dagger, silentgear:pickaxe, silentgear:shovel, silentgear:axe, silentgear:paxel, silentgear:hammer, silentgear:excavator, silentgear:saw, silentgear:prospector_hammer, silentgear:mattock, silentgear:sickle, occultism:iesnium_pickaxe, mob_grinding_utils:null_sword, farmersdelight:diamond_knife, mekanismtools:diamond_paxel, projectred-exploration:diamond_sickle, cyclic:mattock, cyclic:mattock_nether, rftoolsbuilder:superharvestingtool, forbidden_arcanus:diamond_blacksmith_gavel, chiselsandbits:chisel_diamond
     #  [default: [Diamond], [Zircon], [Gemstone], [Jewel], [Crystal]]
     S:DIAMOND <
         Diamond
@@ -2144,7 +2150,7 @@ tools {
      >
 
     # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: mysticalagriculture:tertium_sword, mysticalagriculture:tertium_pickaxe, mysticalagriculture:tertium_shovel, mysticalagriculture:tertium_axe, mysticalagriculture:tertium_hoe
+    # Items in this group: mysticalagradditions:tertium_paxel
     #  [default: ]
     S:TERTIUM <
      >
@@ -2417,6 +2423,12 @@ tools {
     S:aoa3_underworld_greatblade <
      >
     S:aoa3_void_sword <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: astralsorcery:crystal_sword, astralsorcery:infused_crystal_sword
+    #  [default: ]
+    S:astralsorcery_crystal_sword <
      >
 
     # A list of material-based prefix names for this material group. May be empty.
