--- a/client/current/overrides/config/jei/recipe-category-sort-order.ini
+++ b/client/current/overrides/config/jei/recipe-category-sort-order.ini
@@ -284,3 +284,11 @@ silentgear:compounding/gem
 silentgear:compounding/metal
 silentgear:grading
 silentgear:salvaging
+astralsorcery:altar_attunement
+astralsorcery:altar_constellation
+astralsorcery:altar_discovery
+astralsorcery:altar_trait
+astralsorcery:infuser
+astralsorcery:interaction
+astralsorcery:transmutation
+astralsorcery:well
