--- a/client/current/overrides/config/apotheosis/enchantments.cfg
+++ b/client/current/overrides/config/apotheosis/enchantments.cfg
@@ -492,6 +492,36 @@
 }
 
 
+"astralsorcery:night_vision" {
+    # The max level of this enchantment - normally 1. [range: 1 ~ 127, default: 1]
+    I:"Max Level"=1
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
+    I:"Min Level"=1
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+}
+
+
+"astralsorcery:scorching_heat" {
+    # The max level of this enchantment - normally 1. [range: 1 ~ 127, default: 1]
+    I:"Max Level"=1
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
+    I:"Min Level"=1
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+}
+
+
 "cofh_core:holding" {
     # The max level of this enchantment - normally 4. [range: 1 ~ 127, default: 11]
     I:"Max Level"=11
