--- a/server/current/manifest.json
+++ b/server/current/manifest.json
@@ -45,6 +45,11 @@
       "required": true
     },
     {
+      "projectID": 354143,
+      "fileID": 3910090,
+      "required": true
+    },
+    {
       "projectID": 231275,
       "fileID": 3222705,
       "required": true
@@ -107,6 +112,11 @@
     {
       "projectID": 273744,
       "fileID": 3827756,
+      "required": true
+    },
+    {
+      "projectID": 251407,
+      "fileID": 3222131,
       "required": true
     },
     {
@@ -227,6 +237,11 @@
     {
       "projectID": 355418,
       "fileID": 3247019,
+      "required": true
+    },
+    {
+      "projectID": 509575,
+      "fileID": 3586190,
       "required": true
     },
     {
@@ -570,6 +585,11 @@
       "required": true
     },
     {
+      "projectID": 416089,
+      "fileID": 3939578,
+      "required": true
+    },
+    {
       "projectID": 347954,
       "fileID": 3232534,
       "required": true
@@ -902,6 +922,11 @@
     {
       "projectID": 258914,
       "fileID": 3116235,
+      "required": true
+    },
+    {
+      "projectID": 60089,
+      "fileID": 3202662,
       "required": true
     },
     {
