--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,6 @@ smoothboot.json
 */**/kubejs/client.txt
 */**/kubejs/server.txt
 */**/kubejs/startup.txt
-*/**/kubejs/exported/
+*/**/kubejs/exported
+
+/server/current/**/*-client.toml
