--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /client/current/overrides/config/voicechat
 /client/current/overrides/config/voicechat-client.toml
 /client/current/overrides/config/smoothboot.json
+/client/current/overrides/config/brandon3055/servers
 
 */**/kubejs/client.txt
 */**/kubejs/server.txt
