--- a/client/current/manifest.json
+++ b/client/current/manifest.json
@@ -581,7 +581,7 @@
     },
     {
       "projectID": 416089,
-      "fileID": 3939578,
+      "fileID": 3944666,
       "required": true
     },
     {
@@ -1020,6 +1020,11 @@
       "required": true
     },
     {
+      "projectID": 370696,
+      "fileID": 3630290,
+      "required": true
+    },
+    {
       "projectID": 371813,
       "fileID": 3584716,
       "required": true
@@ -1172,6 +1177,11 @@
     {
       "projectID": 444532,
       "fileID": 3738432,
+      "required": true
+    },
+    {
+      "projectID": 306028,
+      "fileID": 3682621,
       "required": true
     },
     {
