--- a/client/current/overrides/config/brandon3055/ModuleStats.cfg
+++ b/client/current/overrides/config/brandon3055/ModuleStats.cfg
@@ -7,9 +7,9 @@
 }
 
 "draconicevolution:wyvern_energy" {
-	B:"override"=false
+	B:"override"=true
 
-	L:"capacity"=4000000
+	L:"capacity"=400000000
 
 	L:"transfer"=64000
 }
