--- a/client/current/overrides/config/ftb-power-pots-common.toml
+++ b/client/current/overrides/config/ftb-power-pots-common.toml
@@ -51,11 +51,11 @@
 	speedModifier = 0.8
 	#How much energy the pot will hold
 	#Range: > 0
-	maxEnergy = 400000
+	maxEnergy = 40000000
 	#Energy consumed per tick
 	#Range: > 0
-	perTickEnergy = 2000
+	perTickEnergy = 200000
 	#Amount of items outputted per operation
 	#Range: 1 ~ 1728
-	itemsPerOutput = 64
+	itemsPerOutput = 256
 
