trying to fix manifest json i guess
freaking curseforge man,
All I was trying to do was update the modlist.html to not be in one line.

--- a/client/current/manifest.json
+++ b/client/current/manifest.json
@@ -10,7 +10,7 @@
   },
   "manifestType": "minecraftModpack",
   "manifestVersion": 1,
-  "name": "MMBI (wip)",
+  "name": "MMBI",
   "version": "0.3",
   "author": "",
   "files": [
@@ -42,6 +42,11 @@
     {
       "projectID": 241319,
       "fileID": 3682110,
+      "required": true
+    },
+    {
+      "projectID": 383182,
+      "fileID": 3781126,
       "required": true
     },
     {
@@ -405,6 +410,11 @@
       "required": true
     },
     {
+      "projectID": 404757,
+      "fileID": 3275061,
+      "required": true
+    },
+    {
       "projectID": 271835,
       "fileID": 3788891,
       "required": true
@@ -687,6 +697,11 @@
     {
       "projectID": 620582,
       "fileID": 3918474,
+      "required": true
+    },
+    {
+      "projectID": 260912,
+      "fileID": 3813662,
       "required": true
     },
     {
@@ -1020,13 +1035,13 @@
       "required": true
     },
     {
-      "projectID": 370696,
-      "fileID": 3630290,
+      "projectID": 371813,
+      "fileID": 3584716,
       "required": true
     },
     {
-      "projectID": 371813,
-      "fileID": 3584716,
+      "projectID": 370696,
+      "fileID": 3630290,
       "required": true
     },
     {
@@ -1087,6 +1102,11 @@
     {
       "projectID": 374087,
       "fileID": 3143731,
+      "required": true
+    },
+    {
+      "projectID": 377448,
+      "fileID": 3581611,
       "required": true
     },
     {
