--- a/client/current/overrides/config/apotheosis/names.cfg
+++ b/client/current/overrides/config/apotheosis/names.cfg
@@ -798,6 +798,18 @@ armors {
      >
 
     # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: boss_tools:netherite_oxygen_mask, boss_tools:netherite_space_suit, boss_tools:netherite_space_pants, boss_tools:netherite_space_boots
+    #  [default: ]
+    S:boss_tools_netherite_oxygen_mask <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: boss_tools:oxygen_mask, boss_tools:space_suit, boss_tools:space_pants, boss_tools:space_boots
+    #  [default: ]
+    S:boss_tools_oxygen_mask <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
     # Items in this group: create_stuff_additions:andesite_accelerator_leggings
     #  [default: ]
     S:create_stuff_additions_andesite_accelerator_leggings <
@@ -1980,13 +1992,13 @@ tools {
      >
 
     # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: mysticalagriculture:imperium_sword, mysticalagriculture:imperium_pickaxe, mysticalagriculture:imperium_shovel, mysticalagriculture:imperium_axe, mysticalagriculture:imperium_hoe
+    # Items in this group: mysticalagradditions:imperium_paxel
     #  [default: ]
     S:IMPERIUM <
      >
 
     # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: mysticalagriculture:inferium_sword, mysticalagriculture:inferium_pickaxe, mysticalagriculture:inferium_shovel, mysticalagriculture:inferium_axe, mysticalagriculture:inferium_hoe
+    # Items in this group: mysticalagradditions:inferium_paxel
     #  [default: ]
     S:INFERIUM <
      >
@@ -2074,7 +2086,7 @@ tools {
      >
 
     # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: mysticalagriculture:prudentium_sword, mysticalagriculture:prudentium_pickaxe, mysticalagriculture:prudentium_shovel, mysticalagriculture:prudentium_axe, mysticalagriculture:prudentium_hoe
+    # Items in this group: mysticalagradditions:prudentium_paxel
     #  [default: ]
     S:PRUDENTIUM <
      >
@@ -2204,7 +2216,7 @@ tools {
      >
 
     # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: tropicraft:zircon_hoe, tropicraft:zircon_axe, tropicraft:zircon_pickaxe, tropicraft:zircon_shovel, tropicraft:zircon_sword
+    # Items in this group: gaiadimension:zircon_prince_razor
     #  [default: ]
     S:ZIRCON <
      >
@@ -2483,6 +2495,12 @@ tools {
     # Items in this group: avaritia:world_breaker
     #  [default: ]
     S:avaritia_world_breaker <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: boss_tools:steel_sword, boss_tools:steel_shovel, boss_tools:steel_pickaxe, boss_tools:steel_axe, boss_tools:steel_hoe
+    #  [default: ]
+    S:boss_tools_steel_sword <
      >
 
     # A list of material-based prefix names for this material group. May be empty.
