--- a/client/current/overrides/config/jei/recipe-category-sort-order.ini
+++ b/client/current/overrides/config/jei/recipe-category-sort-order.ini
@@ -292,3 +292,14 @@ astralsorcery:infuser
 astralsorcery:interaction
 astralsorcery:transmutation
 astralsorcery:well
+boss_tools:blastingfurnacecategory
+boss_tools:compressorcategory
+boss_tools:fuelmakercategory
+boss_tools:generatorcategory
+boss_tools:oxygen_bubble_distributor
+boss_tools:oxygen_loader
+boss_tools:rocket_t_1_category
+boss_tools:rocket_t_2_category
+boss_tools:rocket_t_3_category
+boss_tools:rovercategory
+boss_tools:workbenchcategory
