--- a/client/current/manifest.json
+++ b/client/current/manifest.json
@@ -601,7 +601,7 @@
     },
     {
       "projectID": 416089,
-      "fileID": 3944666,
+      "fileID": 3951696,
       "required": true
     },
     {
@@ -1130,13 +1130,13 @@
       "required": true
     },
     {
-      "projectID": 314906,
-      "fileID": 3603374,
+      "projectID": 471286,
+      "fileID": 3276638,
       "required": true
     },
     {
-      "projectID": 471286,
-      "fileID": 3276638,
+      "projectID": 314906,
+      "fileID": 3603374,
       "required": true
     },
     {
@@ -1207,6 +1207,11 @@
     {
       "projectID": 306028,
       "fileID": 3682621,
+      "required": true
+    },
+    {
+      "projectID": 266936,
+      "fileID": 3681879,
       "required": true
     },
     {
